address comments, update maven profile